--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -507,7 +507,8 @@ $mainBronze: #7f8300;
 
   .steps {
     margin-bottom: 8vh;
-    padding: 0 20px;
+    padding: 0 15px;
+    margin-left: 20px;
 
     .steps-wrap {
       display: flex;
@@ -521,93 +522,112 @@ $mainBronze: #7f8300;
         width: (100% / 3);
         font-family: $pariMatch;
 
+        &:first-child {
+
+          .icon {
+
+            &::before {
+              background-color: #7e8200;
+              width: 15px;
+              height: 13px;
+              z-index: 2;
+              bottom: -5px;
+              right: 25px;
+            }
+            &::after {
+              background-color: $mainBlack;
+              height: 40px;
+              width: 42px;
+              top: -5px;
+              left: 8px;
+            }
+
+          }
+
+        }
+
+        &:nth-child(2) {
+
+          .icon {
+
+            &::before {
+              background-color: $mainBlack;
+              height: 14px;
+              width: 13px;
+              bottom: 7px;
+              left: 10px;
+              z-index: 2;
+            }
+            &::after {
+              background-color: $mainBlack;
+              height: 15px;
+              width: 15px;
+              top: -1px;
+              right: 2px;
+            }
+
+          }
+
+        }
+
+        &:nth-child(3) {
+
+          .icon {
+
+            &::before {
+              background-color: $mainBlack;
+              height: 15px;
+              width: 10px;
+              bottom: 7px;
+              left: 4px;
+              z-index: 2;
+            }
+            &::after {
+              background-color: $mainBlack;
+              height: 30px;
+              width: 40px;
+              bottom: -3px;
+              left: 2px;
+            }
+
+          }
+
+        }
+
         .icon {
           position: relative;
           width: 70px;
           height: 55px;
 
-          &::before {
+          &::before, &::after {
             content: '';
             display: block;
             position: absolute;
             z-index: -1;
-            background: url("../images/steps/1/step-1.png") no-repeat;
-            background-size: cover;
-            width: 100%;
-            height: 100%;
-
-
+            transform: skewX(-15deg);
           }
 
           .number {
+            position: relative;
+            z-index: 1;
             font-size: 32px;
             text-align: center;
             line-height: 55px;
             font-weight: 400;
 
-          }
+            &::before {
+              content: '';
+              position: absolute;
+              top: 0;
+              left: 50%;
+              display: block;
+              background-color: #fff;
+              z-index: -1;
+              width: 55px;
+              height: 55px;
+              transform: skewX(-15deg) translateX(-50%);
+            }
 
-        }
-
-        .icon-middle {
-          position: relative;
-          width: 70px;
-          height: 55px;
-
-          &::before {
-            content: "";
-            display: block;
-            position: absolute;
-            background: url("../images/steps/2/step-2.png") no-repeat;
-            background-size: cover;
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-          }
-
-          .number {
-            font-size: 32px;
-            text-align: center;
-            line-height: 55px;
-            font-weight: 400;
-
-          }
-
-          .title {
-            font-size: 28px;
-            font-weight: 300;
-            margin-left: 10px;
-          }
-        }
-
-        .icon-last {
-          position: relative;
-          width: 70px;
-          height: 56px;
-
-          &::before {
-            content: "";
-            display: block;
-            position: absolute;
-            background: url("../images/steps/3/step-3.png") no-repeat;
-            background-size: cover;
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-          }
-
-          .number {
-            font-size: 32px;
-            text-align: center;
-            line-height: 55px;
-            font-weight: 400;
-
-          }
-
-          .title {
-            font-size: 28px;
-            font-weight: 300;
-            margin-left: 10px;
           }
 
         }
